# Ark-Survival-Archipelago

./: .gitignore  BUGS.md  README.md
apworld/: archipelago.json
apworld/ark_ase/: Items.py  Locations.py  Options.py  __init__.py  ark.yaml  data.py  tame_logic.py
apworld/ark_ase/data/: dinos.json  filler.json  spawn_classes.json  spawn_containers.json  tame_logic.json
connector/: ArkConnector.spec  ark_ap_connector.py  build_exe.bat  connector.ini  run_connector.bat
data/: crates.json  engrams.json  locations.json  spawn_classes.json  tek_grants.json
docs/: CONNECTOR_SETUP.md  GETTING_STARTED.md  MULTIWORLD.md  SETUP.md
plugin/ArkAP/: ArkAP.config.default.json  ArkAP.sln  ArkAP.vcxproj  BUILD.md  CMakeLists.txt  README.md
plugin/ArkAP/src/: APClient.hpp  ArkAP.hpp  PluginMain.cpp  Tables.cpp
poptracker/: manifest.json
poptracker/items/: items.json
poptracker/layouts/: tracker.json
poptracker/scripts/: ap_map.lua  autotracking.lua  init.lua
tools/: apply_server_config.bat  apply_server_config.ps1  build_apworld.py  build_release.py  gen_crates.py  gen_dinos.py  gen_engrams.py  gen_locations.py  gen_poptracker.py  gen_spawn_classes.py  gen_tame_logic.py  install_ase_server.bat  install_plugin.bat  install_poptracker.bat  reset_ark_test.bat  start_ase_server.bat  start_transfer_server.bat  switch_map.bat
tools/serverconfig/: Game.ini.settings  GameUserSettings.ini.settings
